# s1_azimuth_time_grid

./: .gitignore  0 - Getting Azimuth Timing for Sentinel-1.ipynb  1 - Get N closest Times.ipynb  2 - Weighting Example.ipynb  Getting Azimuth Timing for Sentinel-1.ipynb  README.md  azimuth_timing.py  environment.yml  pyproject.toml  tox.ini
.github/workflows/: test.yml
notebooks/: API.ipynb
s1_azimuth_time_grid/: __init__.py  s1_azimuth_timing.py
tests/: conftest.py  test.py  test_time_grid.py
